--- a/css/css/capstone1.css
+++ b/css/css/capstone1.css
@@ -3,19 +3,16 @@ html {
 }
 
 body {
-  font-family: "Poppins", sans-serif;
+  font-family: 'Ultra', serif;
   color: #240b36;
 }
 
 
-/*.back-ground{
-  background-image: url(bg7.jpg);
-  background-color: #cccccc;
-  height: 1000px;
-  background-position: center;
-  background-size: 100% 100%;
-  position: relative  
-}*/
+.mLogo{
+  height: 80px;
+  width: 80px;
+}
+
 .back-ground {
   /*padding-bottom: 50px;*/
   height: 100%;
@@ -35,25 +32,35 @@ body {
 }
 
 .navbar{
+  width: 100%;
+  position: fixed;
+  padding: .01px;
   background-color: transparent;
-  background: rgba(0, 0, 0, 0.1);
-   backdrop-filter: blur(2px);
-  -webkit-backdrop-filter: blur(2px);
-  -moz-backdrop-filter: blur(2px);
+  background: rgba(0, 0, 0, 0.6);
+   backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+  -moz-backdrop-filter: blur(4px);
+  z-index: 3;
 }
 
 .navbar-nav li{
   padding: 0 10px;
 }
 
-.navbar-nav li a{
-  color:  #fff !important;
+.navbar-nav li a, .navN{
+  color:  #abf4e6 !important;
   font-weight: 600;
+  font-size: 30px;
   float: right;
   text-align: left;
 }
 
+.navIcon{
+  padding-right: 10px;
+}
+
 .jumb1{
+  margin-top: 100px;
   padding: 20px;
   color: #240b36;
   border-radius: 20px;
@@ -68,25 +75,26 @@ body {
   transition: 0.5s;
 }
 
-.jmbBtn{
+.jmbBtn,.btn-contact{
   font-weight: 600;
+  font-size: 30px;
   color: #fff;
   width: 50%;
-  padding: 10px 40px;
   border-radius: 20px;
   -webkit-border-radius: 20px;
   -moz-border-radius: 20px;
   transition: all 0.5s ease;
-  outline: none;
   background: #003f74;
   box-shadow: 0 5px 16px 0 rgba(31, 31, 31, 0.2);
   -webkit-box-shadow: 0 5px 16px 0 rgba(31, 31, 31, 0.2);
   -moz-box-shadow: 0 5px 16px 0 rgba(31, 31, 31, 0.2);
+  transition: 0.8s;
 }
 
-.jmbBtn:hover{
+.jmbBtn:hover,.btn-contact:hover{
   background: #02739d;
   color: #fff;
+  transform: scale(1.1);
 }
 
 
@@ -146,6 +154,7 @@ body {
 }
 
 .aboutH{
+  text-transform: uppercase;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
   -webkit-text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
   -moz-text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
@@ -155,19 +164,63 @@ body {
   color: #09264e;
 }
 
-.wExperience{
+.wExperience, .wEducation{
+  text-transform: uppercase;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
   -webkit-text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
   -moz-text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
   padding-bottom: 50px;
   font-weight: 600;
-  font-size: 50px; 
+  font-size: 40px; 
   color: #bfe0c3;
 }
 
-.wCompany,.wDescription,.wRole{
+.wCompany,.wDescription,.wRole,.eLevel,.eSYear,.schoolA{
   font-weight: 300;
-  color: #bfe0c3;
+}
+
+.wCompany,.eLevel{
+  font-size: 40px;
+  color: #bbe0c5;
+}
+
+.wRole{
+  padding-top: 10px;
+}
+
+.wRole,.schoolA{
+  font-size: 35px;
+  color: #c8f3e9;
+
+}
+.wDescription,.wDate{
+  color: #fbfff9;
+  font-size: 20px;
+  text-align: justify;
+}
+
+.wPadding{
+  padding-top: 20px;
+}
+
+.ePadding{
+  padding-bottom: 20px;
+}
+.wDate{
+  color: #00ffff;
+  font-weight: 300;
+  text-align: center;
+}
+
+.eSYear{
+  padding-top: 10px;
+  color: #fbfff9;
+  font-size: 20px;
+  text-align: center;
+}
+
+.sAward{
+  color: #00ffff;
 }
 
 .aPadding{
@@ -196,3 +249,149 @@ body {
 /*.projects{
   background: linear-gradient(180deg, #09264e, #19809e);
 }*/
+
+.imgPadding{
+  margin-left: auto;
+  margin-right: auto;
+  padding: 20px;
+  height: 50%;
+  width: 50%;
+}
+
+.pPadding{
+  padding: 20px;
+}
+
+.cPPadding{
+  padding: 20px;
+}
+
+.card-title{
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
+  -webkit-text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
+  -moz-text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
+  font-weight: 600;
+  font-size: 50px; 
+  color: #bee9f2;
+}
+
+.card-text{
+  color: #16abde;
+}
+
+.card{
+  background-image: url(bg2.jpg);
+  border: 0;
+  padding: 20px;
+  font-weight: 600;
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.59);
+  -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.59);
+  -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.59);
+  transition: 0.8s;
+}
+
+.card:hover{
+  transform: scale(1.1);
+}
+
+.btnProject{
+  background-color: #abf4e6;
+  font-weight: 600;
+  color: #030b16;
+  width: 50%;
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  outline: none;
+  transition: 0.8s;
+}
+
+.btnProject:hover{
+  background: #02739d;
+  color: #fff;
+  transform: scale(1.1)
+}
+
+.pTitle{
+  text-transform: uppercase;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
+  -webkit-text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
+  -moz-text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
+  padding-bottom: 50px;
+  font-weight: 600;
+  font-size: 50px; 
+  color: #0c213e;
+}
+
+.cTitle{
+  text-transform: uppercase;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
+  -webkit-text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
+  -moz-text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
+  padding-bottom: 20px;
+  font-weight: 600;
+  font-size: 50px; 
+  color: #0c213e;
+  padding-top: 80px;
+}
+
+.contactP{
+  padding-bottom: 50px;
+}
+
+
+.contactPC,.contactD{
+  max-width: 800px;
+  margin: 50px auto;
+  position: relative;
+  box-shadow: 0 10px 30px 0px rgba(0,0,0,0.1);
+  padding: 20px;
+  padding-bottom: 30px;
+}
+
+.cInput{
+  width: 100%;
+  height: 100%;
+}
+
+.cInput:hover{
+  transform: scale(1.0);
+}
+
+.cIcon{
+  margin-right: 10px;
+}
+
+.footer{
+  background: linear-gradient(180deg, #09264e, #19809e);
+}
+
+.footerA{
+  font-weight: 600;
+  font-size: 30px;
+  color: black;
+  padding: 20px 0 80px 0;
+}
+
+.iconbtn{
+  font-size: 40px;
+  color: #abf4e6;
+  background-color: #19809e;
+  margin: 10px;
+  padding: 15px;
+  padding-bottom: 20px;
+  border-radius: 50px;
+  box-shadow: 0 10px 30px 0px rgba(1,1,1,1.1);
+  transition: 0.8s;
+}
+
+.contactM{
+  display: block;
+  margin: auto;
+  height: 100%;
+  width: 100%;
+}
+
