--- a/css/css/capstone1.css
+++ b/css/css/capstone1.css
@@ -49,10 +49,21 @@ body {
 
 .navbar-nav li a, .navN{
   color:  #abf4e6 !important;
+  color: url;
   font-weight: 600;
   font-size: 30px;
   float: right;
   text-align: left;
+  transition: 0.8s;
+}
+
+.navbar-nav li a:hover{
+  /*background: rgba(255, 255, 255, 0.3);
+  box-shadow: 0 8px 20px 0 rgba(31, 38, 135, 0.13);
+  backdrop-filter: blur(7px);
+  -webkit-backdrop-filter: blur(7px);
+  -moz-backdrop-filter: blur(7px);*/
+  transform: scale(1.1);
 }
 
 .navIcon{
