--- a/css/css/capstone1.css
+++ b/css/css/capstone1.css
@@ -13,6 +13,7 @@ body {
   width: 80px;
 }
 
+
 .back-ground {
   /*padding-bottom: 50px;*/
   height: 100%;
@@ -21,12 +22,7 @@ body {
   background-size: 100% 100%;
 }
 
-.wave{
-  display: block;
-  top: 0;
-  bottom: 0;
-}
-
+/*NavBar Section*/
 .nav-bar{
   padding-bottom: 50px;
 }
@@ -69,6 +65,10 @@ body {
 .navIcon{
   padding-right: 10px;
 }
+
+/*End of NavBar Section*/
+
+/*Jumbutron Section*/
 
 .jumb1{
   margin-top: 100px;
@@ -158,6 +158,9 @@ body {
   -moz-box-shadow: -2px -2px 20px 2px rgba(0, 0, 0, 0.15), 2px 2px 17px 2px rgba(0,0,0,1);
 }
 
+/*End of Jumbutron Section*/
+
+/*About Section*/
 .aBack-ground{
   padding: 20px 0;
   /*background-repeat: no-repeat;
@@ -173,6 +176,32 @@ body {
   font-weight: 600;
   font-size: 50px;  
   color: #09264e;
+}
+
+.Cert{
+  text-transform: uppercase;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
+  -webkit-text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
+  -moz-text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
+  padding-bottom: 50px;
+  font-weight: 600;
+  font-size: 50px;  
+  color: #09264e;
+}
+
+.cerPadding{
+  height: 100%;
+  width: 100%;
+  padding: 20px;
+  border-radius: 20px;
+  box-shadow: -2px -2px 20px 2px rgba(0, 0, 0, 0.15), 2px 2px 17px 2px rgba(0,0,0,1);
+  -webkit-box-shadow: -2px -2px 20px 2px rgba(0, 0, 0, 0.15), 2px 2px 17px 2px rgba(0,0,0,1);
+  -moz-box-shadow: -2px -2px 20px 2px rgba(0, 0, 0, 0.15), 2px 2px 17px 2px rgba(0,0,0,1);
+  transition: 0.8s;
+}
+
+.cerPadding:hover{
+  transform: scale(1.1);
 }
 
 .wExperience, .wEducation{
@@ -273,6 +302,7 @@ body {
   padding: 20px;
 }
 
+
 .cPPadding{
   padding: 20px;
 }
@@ -337,6 +367,10 @@ body {
   color: #0c213e;
 }
 
+/*End of About Section*/
+
+/*Contact Section*/
+
 .cTitle{
   text-transform: uppercase;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
@@ -376,6 +410,10 @@ body {
   margin-right: 10px;
 }
 
+/*End of Contact Section*/
+
+/*Footer*/
+
 .footer{
   background: linear-gradient(180deg, #09264e, #19809e);
 }
@@ -386,6 +424,10 @@ body {
   color: black;
   padding: 20px 0 80px 0;
 }
+
+/*End of Footer*/
+
+/*Social Icons*/
 
 .iconbtn{
   font-size: 40px;
@@ -399,6 +441,10 @@ body {
   transition: 0.8s;
 }
 
+/*End of Social Icons*/
+
+/*Modal*/
+
 .contactM{
   display: block;
   margin: auto;
@@ -406,3 +452,9 @@ body {
   width: 100%;
 }
 
+/*End of Modal*/
+
+/*.modalSize{
+  height: 200%;
+  width: 200%;
+}*/
