--- a/css/css/capstone1.css
+++ b/css/css/capstone1.css
@@ -19,7 +19,7 @@ body {
   height: 100%;
   background-image: url(bg7.jpg);
   background-position: center;
-  background-size: 100% 100%;
+  background-size: 100%;
 }
 
 /*NavBar Section*/
@@ -30,7 +30,7 @@ body {
 .navbar{
   width: 100%;
   position: fixed;
-  padding: .01px;
+  /*padding: 10px;*/
   background-color: transparent;
   background: rgba(0, 0, 0, 0.6);
    backdrop-filter: blur(4px);
@@ -40,14 +40,13 @@ body {
 }
 
 .navbar-nav li{
-  padding: 0 10px;
+  padding: 0 10px 0 0;
 }
 
 .navbar-nav li a, .navN{
   color:  #abf4e6 !important;
-  color: url;
   font-weight: 600;
-  font-size: 30px;
+  font-size: 25px;
   float: right;
   text-align: left;
   transition: 0.8s;
@@ -87,18 +86,18 @@ body {
 }
 
 .jmbBtn,.btn-contact{
+  width: 50%;
   font-weight: 600;
   font-size: 30px;
   color: #fff;
-  width: 50%;
   border-radius: 20px;
   -webkit-border-radius: 20px;
   -moz-border-radius: 20px;
   transition: all 0.5s ease;
   background: #003f74;
-  box-shadow: 0 5px 16px 0 rgba(31, 31, 31, 0.2);
-  -webkit-box-shadow: 0 5px 16px 0 rgba(31, 31, 31, 0.2);
-  -moz-box-shadow: 0 5px 16px 0 rgba(31, 31, 31, 0.2);
+   box-shadow: 0 10px 30px 0px rgba(1,1,1,1.1);
+  -webkit-box-shadow: 0 10px 30px 0px rgba(1,1,1,1.1);
+  -moz-box-shadow: 0 10px 30px 0px rgba(1,1,1,1.1);
   transition: 0.8s;
 }
 
@@ -178,7 +177,7 @@ body {
   color: #09264e;
 }
 
-.Cert{
+/*.Cert{
   text-transform: uppercase;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
   -webkit-text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
@@ -187,7 +186,7 @@ body {
   font-weight: 600;
   font-size: 50px;  
   color: #09264e;
-}
+}*/
 
 .cerPadding{
   height: 100%;
@@ -202,6 +201,17 @@ body {
 
 .cerPadding:hover{
   transform: scale(1.1);
+}
+
+.Cert{
+  text-transform: uppercase;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
+  -webkit-text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
+  -moz-text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
+  padding-bottom: 50px;
+  font-weight: 600;
+  font-size: 40px; 
+  color: #09264e;
 }
 
 .wExperience, .wEducation{
@@ -383,11 +393,22 @@ body {
   padding-top: 80px;
 }
 
+.title{
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 40px;
+}
+
 .contactP{
   padding-bottom: 50px;
 }
 
-
+/*.contactB{
+  background-image: url(wave-435346.jpg);
+  background-size: cover;
+  position: center;
+}
+*/
 .contactPC,.contactD{
   max-width: 800px;
   margin: 50px auto;
@@ -395,11 +416,31 @@ body {
   box-shadow: 0 10px 30px 0px rgba(0,0,0,0.1);
   padding: 20px;
   padding-bottom: 30px;
+  border-radius: 20px;
+}
+
+.contactPC{
+  background-image: url(pngwing.com.png);
+  background-size: cover;
+  position: center;
+  /*background-color: #eeeee4;*/
+}
+
+.lInput{
+  text-transform: uppercase;
+  font-size: 20px;
+  font-weight: 600;
+  color: #09264e;
 }
 
 .cInput{
   width: 100%;
   height: 100%;
+  border-width: thin;
+  border-color: #19809e;
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
+  -webkit-text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
+  -moz-text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
 }
 
 .cInput:hover{
@@ -422,7 +463,7 @@ body {
   font-weight: 600;
   font-size: 30px;
   color: black;
-  padding: 20px 0 80px 0;
+  padding: 20px 0 50px 0;
 }
 
 /*End of Footer*/
@@ -438,7 +479,13 @@ body {
   padding-bottom: 20px;
   border-radius: 50px;
   box-shadow: 0 10px 30px 0px rgba(1,1,1,1.1);
+  -webkit-box-shadow: 0 10px 30px 0px rgba(1,1,1,1.1);
+  -moz-box-shadow: 0 10px 30px 0px rgba(1,1,1,1.1);
   transition: 0.8s;
+}
+.iconbtn:hover{
+  transform: scale(1.5);
+  background-color: #09264e;
 }
 
 /*End of Social Icons*/
@@ -458,3 +505,49 @@ body {
   height: 200%;
   width: 200%;
 }*/
+
+@media (min-width: 768px) and (max-width: 991px) {
+  .jmbBtn,
+  .btn-contact {
+    display: inline-block;
+    width: 100%;
+  }
+}
+
+@media (min-width: 576px) and (max-width: 767px) {
+  .jmbBtn,
+  .btn-contact {
+    display: inline-block;
+    width: 100%;
+  }
+}
+
+@media (max-width: 575px) {
+  .jmbBtn,
+  .btn-contact {
+    display: inline-block;
+    width: 100%;
+  }
+}
+
+@media (max-width: 425px) {
+  .jmbBtn,
+  .btn-contact {
+    display: inline-block;
+    width: 100%;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 424px) {
+  .jmbBtn,
+  .btn-contact,
+  .btnProject {
+    display: inline-block;
+    width: 100%;
+  }
+}
+@media (min-width: 320px) and (max-width: 424px) {
+  .card-title{
+    font-size: 30px;
+  }
+}
