--- a/css/css/capstone1.css
+++ b/css/css/capstone1.css
@@ -77,7 +77,9 @@ body {
   -webkit-border-radius: 20px;
   -moz-border-radius: 20px;
   background: rgba(255, 255, 255, 0.3);
-  box-shadow: 0 8px 20px 0 rgba(31, 38, 135, 0.13);
+  box-shadow: 0 10px 30px 0px rgba(1,1,1,1.1);
+  -webkit-box-shadow: 0 10px 30px 0px rgba(1,1,1,1.1);
+  -moz-box-shadow: 0 10px 30px 0px rgba(1,1,1,1.1);
   backdrop-filter: blur(7px);
   -webkit-backdrop-filter: blur(7px);
   -moz-backdrop-filter: blur(7px);
@@ -117,11 +119,18 @@ body {
   font-weight: 600;
 }
 
+.imgDiv{
+  padding: 50px;
+}
+
 .imgSize{
   border-radius: 60px;
   -webkit-border-radius: 20px;
   -moz-border-radius: 20px;
   transition: 0.8s;
+  box-shadow: 0 10px 30px 0px rgba(1,1,1,1.1);
+  -webkit-box-shadow: 0 10px 30px 0px rgba(1,1,1,1.1);
+  -moz-box-shadow: 0 10px 30px 0px rgba(1,1,1,1.1);
 }
 
 .imgSize:hover {
