--- a/css/css/capstone1.css
+++ b/css/css/capstone1.css
@@ -358,12 +358,20 @@ body {
   background: linear-gradient(180deg, #09264e, #19809e);
 }*/
 
+/* .projects{
+  margin-bottom: 500px;
+} */
+
 .imgPadding{
   margin-left: auto;
   margin-right: auto;
-  padding: 20px;
-  height: 50%;
-  width: 50%;
+  padding: 0;
+  height: 100%;
+  width: 100%;
+}
+
+.projectDescription{
+  color: #abf4e6;
 }
 
 .pPadding{
@@ -374,6 +382,12 @@ body {
 .cPPadding{
   padding: 20px;
 }
+
+.cPPadding .card{
+  height: 100%;
+}
+
+
 
 .card-title{
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
@@ -410,12 +424,13 @@ body {
   background-color: #abf4e6;
   font-weight: 600;
   color: #030b16;
-  width: 50%;
+  width: 100%;
   border-radius: 20px;
   -webkit-border-radius: 20px;
   -moz-border-radius: 20px;
   outline: none;
   transition: 0.8s;
+  text-transform: uppercase;
 }
 
 .btnProject:hover{
